--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
-
-
 <div>
-    <app-contact-detail></app-contact-detail>
+    <app-header></app-header>
+</div>
+<div class="container">
+    <app-contacts></app-contacts>
 </div>
