--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,1 +1,21 @@
-<p>contact-detail works!</p>
+<div class="panel panel-default">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-xs-8">
+                    <h4>{{ contact.name }}</h4>
+                    <div class="btn-group pull-left">
+                        <a href="#" class="btn btn-primary btn-sm">Edit</a>
+                        <a href="#" class="btn btn-danger btn-sm">Delete</a>
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <img class="img img-responsive img-rounded pull-right" style="max-width: 60px" src="https://web.byui.edu/Directory/Employee/jacksonk.jpg"
+                        alt="Photo of Jackson ">
+                </div>
+            </div>
+        </div>
+        <div class="panel-body">
+            <p><strong>Email:</strong></p>
+            <p><strong>Phone:</strong></p>
+        </div>
+    </div>
