--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,1 +1,16 @@
-<p>contact-list works!</p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+      <div class="btn-group pull-right">
+          <button class="btn btn-success">New Contact</button>
+      </div>
+      <h4>Contacts</h4>
+  </div>
+  <div class="panel-body">
+      <div class="row">
+          <div class="col-xs-12">
+              <app-contact-item *ngFor="let contact of contacts" [contact]="contact" (click)="onSelected(contact)"></app-contact-item>
+          </div>
+      </div>
+  </div>
+</div>
+    
