--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,10 @@
-<p>contacts works!</p>
+      <div class="row">
+            <div class="col-md-5">
+                <!-- <h2>Contact list goes here</h2> -->
+                <app-contact-list ></app-contact-list>
+            </div>
+            <div class="col-md-7">
+                <!-- <h2>Contact-detail goes here</h2> -->
+                <app-contact-detail ></app-contact-detail>
+            </div>
+        </div>
