--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 
-<div>
-    <app-header></app-header>
+    <app-header (selectedFeatureEvent)="switchView($event)"></app-header>
+
+  <div class="container">
+
+    <app-documents *ngIf="selectedFeature =='documents'" ></app-documents>
+    <app-message-list *ngIf="selectedFeature =='messages'"></app-message-list>
+
+    <app-contacts *ngIf="selectedFeature == 'contacts'"></app-contacts>
+    
 </div>
-<div class="container">
-    <app-contacts></app-contacts>
-</div>
+
