--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="panel-body">
-            <p><strong>Email:</strong></p>
-            <p><strong>Phone:</strong></p>
+                <p><strong>Email: </strong> {{ contact.email }}</p>
+                <p><strong>Phone: </strong> {{ contact.phone }}</p>
         </div>
     </div>
