--- a/src/app/documents/document-list/document-list.component.html
+++ b/src/app/documents/document-list/document-list.component.html
@@ -1,30 +1,19 @@
-<!--<div class="panel panel-default">
-        <div class="panel-heading">
-            <div class="row  pad-left-right">
-               <span class="pull-left title">Documents</button></span>
-              <a class="btn btn-success pull-right">Add Document</a>
-            </div>
-        </div>
-        <div class="panel-body">
-            <div class="center-panel">
-                <div class="col-xs-12">
-                  <app-document-item> </app-document-item>
-            </div>
-        </div>
-    </div> -->
-
-    <div class="panel panel-default">
-            <div class="panel-heading">
-                <div class="btn-group pull-right">
-                    <button class="btn btn-success pull-right">Add Document</button>
-                </div>
-                <h4>Documents</h4>
-            </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <app-document-item> </app-document-item>
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="row pad-left-right">
+        <span class="pull-left title">Documents</span>
+        <a class="btn btn-success pull-right">Add Document</a>
+      </div>
+    </div>
+    <div class="panel-body">
+      <div class="center-panel">
+        <app-document-item
+        *ngFor="let document of documents"
+        [document]="document"
+        (click)="onSelectedDocument(document)">
+        </app-document-item>
+      </div>
+    </div>
+  
+  </div>
+  
