--- a/src/app/messages/message-edit/message-edit.component.html
+++ b/src/app/messages/message-edit/message-edit.component.html
@@ -26,12 +26,8 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-12">
-                <button
-                  class="btn btn-success"
-                  type="button"
-                  (click)="onSendMessage()"
-                >
+              <div class="col-xs-12 btn-toolbar">
+                <button class="btn btn-success" type="button" (click)="onSendMessage()">
                   Send
                 </button>
                 <button class="btn btn-danger" type="button" (click)="onClear()">
