--- a/src/app/contacts/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-item/contact-item.component.html
@@ -1,6 +1,11 @@
-<a href="#" class="list-group-item clearfix">
+<a
+  class="list-group-item clearfix"
+  style="cursor: pointer;"
+  [routerLink]="[contact.contactId]"
+  routerLinkActive="active"
+>
         <div class="pull-left">
-            <h4 class="list-group-item-heading">{{contact.name}}</h4>
+            <h4 class="list-group-item-heading">{{contact?.name}}</h4>
         </div>
         <span class="pull-right">
             <img [src]="contact.imageUrl" alt="Picture of {{ contact.name }}"
