--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,12 +1,15 @@
       <div class="row">
             <div class="col-md-5">
                 <!-- <h2>Contact list goes here</h2> -->
-                <app-contact-list 
-                 (selectedContactEvent)="selectedContact = $event" >
-                </app-contact-list>
+               <app-contact-list ></app-contact-list>
+               
             </div>
             <div class="col-md-7">
                 <!-- <h2>Contact-detail goes here</h2> -->
-                <app-contact-detail [contact]="selectedContact"></app-contact-detail>
+               <!-- <app-contact-detail *ngIf="selectedContact; else infoText"
+                 [contact]="selectedContact">
+                </app-contact-detail>-->
+                <router-outlet></router-outlet>
+        
             </div>
         </div>
