--- a/src/app/documents/document-item/document-item.component.html
+++ b/src/app/documents/document-item/document-item.component.html
@@ -1,4 +1,6 @@
-<a class="list-group-item clearfix documentDiv" >
+<a routerLinkActive="active" 
+[routerLink]="[document.id]"
+class="list-group-item clearfix documentDiv" >
     <!-- Display document name here -->
     {{ document.name }}
   </a>
