--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,16 +1,8 @@
-<div class="row">
+  <div class="row">
     <div class="col-md-5">
-        <app-document-list  
-        (selectedDocumentEvent)="selectedDocument = $event">
-    </app-document-list>
+      <app-document-list></app-document-list>
     </div>
-
-</div>
-<div class="row">
-    <div class="col-md-7"></div>
-    <app-document-detail 
-    [document]="selectedDocument"
-    *ngIf="selectedDocument"
-    ></app-document-detail>
-    <p *ngIf="!selectedDocument">Select a document</p>
-</div>
+    <div class="col-md-7">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
